--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
     h3 {
     padding: 10px;
     }
+    div#goal-sec h2 {
+    text-align: center;
+    padding: 0 0 2em 0;
+    }
+    div#goal-sec h3 {
+    min-height: 3.2em;
+    }
     div#goal-sec, footer {
     background-color: #fff;
     width: 100%;
