--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="col-xs-12 col-md-8 col-md-offset-2">
   <p>著作権切れのテキストを中心に、今や1万3000作品の自由な電子本を収蔵する日本最大級のインターネット電子図書館「青空文庫」。青空文庫の運営はボランティアによって受け継がれてきました。1997年のスタートから着実に蔵書数を増やしてきましたが、だんだんとそのシステムは古くなってきてしまいました。</p>
         <p>そこで青空文庫を技術の力で支えようとスタートしたのが #aozorahack です。青空文庫とは協業関係にあり、本の未来基金の支援を受けています。当面の目標はサーバの安定運用とシステムの分散ですが、それ以外にも青空文庫が今後も続いていけるようなしくみをみなさんと一緒に考えて、動かしていければと考えています。</p>
-        <p>どうかあなたの力を貸してください。興味本意でも全然OK。まずはGitHubでコメントをください。もしなにかご質問がありましたら下記のメールアドレスまでお気軽にご連絡ください。</p>
+        <p>どうかあなたの力を貸してください。興味本意でも全然OK。まずは声をかけてください。</p>
       </div>
     </div>
   </div>
@@ -141,7 +141,7 @@
       <div class="col-xs-12 col-md-8 col-md-offset-2">
         <p>
           まずは課題の作業着手連絡システムの移転に注力します。連絡には
-          <a href="https://aozorahack.slack.com">Slack</a>と<a href="https://github.com/aozorahack/aozorahack">GitHub</a>を使っていますが、今後は月イチのミーティングを考えています。オンラインでも参加できるようなかたちで運用します。また2016年の夏には本の未来基金の大きなイベントを考えており、その中で何らかの#aozorahack のイベントを考えています。
+          <a href="https://aozorahack.slack.com">Slack</a>と<a href="https://github.com/aozorahack/aozorahack">GitHub</a>を使っていますが、今後は定例ミーティングを考えています。オンラインでも参加できるようなかたちで運用します。また2016年の夏には大きなイベントも実施予定です。
         </p>
       </div>
     </div>
@@ -158,12 +158,7 @@
         </p>
         <p>
           <i class="fa fa-slack"></i>
-          Slack: <a href="https://aozorahack.slack.com">https://aozorahack.slack.com</a>
-        </p>
-        <p>
-          <i class="fa fa-envelope"></i>
-          E-mail: <a href="mailto:aozorahack@honnomirai.net">aozorahack@honnomirai.net</a>
-        </p>
+        Slack: <a href="https://aozorahack.slack.com">https://aozorahack.slack.com</a></p>
       </div>
     </div>
   </div>
