--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
         </p>
         <p>
           <i class="fa fa-slack"></i>
-        Slack: <a href="https://aozorahack.slack.com">https://aozorahack.slack.com</a></p>
+          Slack: <a href="https://aozorahack.slack.com">https://aozorahack.slack.com</a>
+          (<a href="https://aozoraslackin.herokuapp.com/">https://aozoraslackin.herokuapp.com/</a>から参加できます)</p>
       </div>
     </div>
   </div>
