今後の予定を更新

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="col-xs-12 col-md-8 col-md-offset-2">
         <p>
           まずは課題の作業着手連絡システムの移転に注力します。連絡には
-          <a href="https://aozorahack.slack.com">Slack</a>と<a href="https://github.com/aozorahack/aozorahack">GitHub</a>を使っていますが、今後は定例ミーティングを考えています。オンラインでも参加できるようなかたちで運用します。また2016年の夏には大きなイベントも実施予定です。
+          <a href="https://aozorahack.slack.com">Slack</a>と<a href="https://github.com/aozorahack/aozorahack">GitHub</a>を使っていますが、オンラインでも参加できるようなかたちで運用します。またアイデアソンやハッカソンの実施、入力イベント（シャッカソン）も開催しています。前回のハッカソンは東京だけでなく、福岡からのリモート参加も実施しました。みなさんからのアイデアもお待ちしています！
         </p>
       </div>
     </div>
