告知文追加

--- a/index.html
+++ b/index.html
@@ -137,10 +137,16 @@
 <div class="container block">
   <div class="bs-docs-section">
     <div class="row">
+    <h2 class="col-xs-12 col-md-8 col-md-offset-2">【告知】</h2>
+      <div class="col-xs-12 col-md-8 col-md-offset-2">
+        <p>
+          4/27(木)の夜にaozorahack有志で集まって、今後の方向性などを話し合うミーティングを行います。興味のある方は下記のSlackにご参加ください。
+        </p>
+      </div>
     <h2 class="col-xs-12 col-md-8 col-md-offset-2">今後の予定</h2>
       <div class="col-xs-12 col-md-8 col-md-offset-2">
         <p>
-          まずは課題の作業着手連絡システムの移転に注力します。連絡には
+          連絡には
           <a href="https://aozorahack.slack.com">Slack</a>と<a href="https://github.com/aozorahack/aozorahack">GitHub</a>を使っていますが、オンラインでも参加できるようなかたちで運用します。またアイデアソンやハッカソンの実施、入力イベント（シャッカソン）も開催しています。前回のハッカソンは東京だけでなく、福岡からのリモート参加も実施しました。みなさんからのアイデアもお待ちしています！
         </p>
       </div>
