告知を目立つ場所に移動

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     background-color: #fff;
     width: 100%;
     }
+    div.notice {
+    margin-bottom: 40px;
+    }
     footer {
         font-size: 10pt;
     }
@@ -95,6 +98,13 @@
 
   <div class="bs-docs-section">
     <div class="row">
+      <div class="notice bg-primary col-xs-12 col-md-8 col-md-offset-2">
+        <h2>【告知】</h2>
+        <p>
+          4/27(木)の夜にaozorahack有志で集まって、今後の方向性などを話し合うミーティングを行います。興味のある方は下記のSlackにご参加ください。
+        </p>
+      </div>
+
       <div class="col-xs-12 col-md-8 col-md-offset-2">
   <p>著作権切れのテキストを中心に、今や1万3000作品の自由な電子本を収蔵する日本最大級のインターネット電子図書館「青空文庫」。青空文庫の運営はボランティアによって受け継がれてきました。1997年のスタートから着実に蔵書数を増やしてきましたが、だんだんとそのシステムは古くなってきてしまいました。</p>
         <p>そこで青空文庫を技術の力で支えようとスタートしたのが #aozorahack です。青空文庫とは協業関係にあり、本の未来基金の支援を受けています。当面の目標はサーバの安定運用とシステムの分散ですが、それ以外にも青空文庫が今後も続いていけるようなしくみをみなさんと一緒に考えて、動かしていければと考えています。</p>
@@ -137,13 +147,7 @@
 <div class="container block">
   <div class="bs-docs-section">
     <div class="row">
-    <h2 class="col-xs-12 col-md-8 col-md-offset-2">【告知】</h2>
-      <div class="col-xs-12 col-md-8 col-md-offset-2">
-        <p>
-          4/27(木)の夜にaozorahack有志で集まって、今後の方向性などを話し合うミーティングを行います。興味のある方は下記のSlackにご参加ください。
-        </p>
-      </div>
-    <h2 class="col-xs-12 col-md-8 col-md-offset-2">今後の予定</h2>
+      <h2 class="col-xs-12 col-md-8 col-md-offset-2">今後の予定</h2>
       <div class="col-xs-12 col-md-8 col-md-offset-2">
         <p>
           連絡には
