--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         <p>
           4/27(木)の夜にaozorahack有志で集まって、今後の方向性などを話し合うミーティングを行います。興味のある方は下記のSlackにご参加ください。
         </p>
+        <p>
+          会場: 一般社団法人インターネットユーザー協会オフィス<br />
+          （東京都港区西麻布1-1-4 オリエンタルビル8階）
+        </p>
       </div>
 
       <div class="col-xs-12 col-md-8 col-md-offset-2">
